# SharedLibraryExample

./: .gitignore  CMakeLists.txt  README.md  app.cpp  compile_and_run.sh
libmylibrary/: Makefile  comp_unix.cpp  comp_windows.cpp  mylibrary.cpp  mylibrary.h
mylibrary/: CMakeLists.txt
mylibrary/include/: mylibrary.h
mylibrary/src/: mylibrary.cpp
src/: main.cpp
